@@ -5,11 +5,6 @@ setenv = RUN_CODE_TESTS=0
 
 [testenv:py27]
 deps = -rrequirements.txt
-whitelist_externals = cd
-pre_commands:
-    cd duplicity
-    python compilec.py
-    cd -
 commands =
     pytest {posargs}
 passenv = LC_CTYPE
@@ -17,11 +12,6 @@ passenv = LC_CTYPE
 
 [testenv:py3]
 deps = -rrequirements.txt
-whitelist_externals = cd
-pre_commands:
-    cd duplicity
-    python compilec.py
-    cd -
 commands =
     pytest {posargs}
 passenv = LC_CTYPE
